fix alignment

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -33,7 +33,6 @@
 
     li {
       display: inline-block;
-      text-align: center;
       width: 29%;
       padding: 1em 0em 1em 0em;
     }
